# csv-to-sqlite

./: .gitignore  .pypirc  LICENSE.txt  Pipfile  ReadMe.md  ReadMe.rst  csv_to_sqlite.py  pyproject.toml  requirements.txt  setup.py
tests/: test_all.py
